--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.0"
+        "bootstrap": "^5.3.0",
+        "bootstrap-icons": "^1.10.5"
     }
 }
