--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
+        "@tiptap/pm": "^2.0.3",
+        "@tiptap/starter-kit": "^2.0.3",
+        "@tiptap/vue-3": "^2.0.3",
+        "@vueup/vue-quill": "^1.2.0",
         "bootstrap": "^5.3.0",
-        "bootstrap-icons": "^1.10.5"
+        "bootstrap-icons": "^1.10.5",
+        "quill-blot-formatter": "^1.0.5",
+        "vue-moments-ago": "^0.2.0"
     }
 }
